--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meus objetivos do ano</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section class="conteudo-principal"></section>
+   <section class="conteudo-principal">
     <h2 class="titulo-principal">Meus objettivos do ano_</h2>
-    <div class="botoes">Curso na </div>
-    <button class="botao"></button>
-    <button class="botao"></button>
-    <button class="botao"></button>
-    <button class="botao"></button>
-</body>
+    <div class="botoes">
+    <button class="botao">Curso na Alura</button>
+      <button class="botao">Criar Projetos em Javacript</button>
+      <button class="botao">criar um portofolio</button>
+      <button class="botao">Atualizar meu currículo</button>
+</div>
+  </section>
+  </body>
 </html>
