--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <section class="conteudo-principal">
     <h2 class="titulo-principal">Meus objettivos do ano_</h2>
     <div class="botoes">
-    <button class="botao">Curso na Alura</button>
-      <button class="botao">Criar Projetos em Javacript</button>
+    <button class="botao">o ar está ficando mais quente ao seu redor</button>
+      <button class="botao">ainda não acabou, garoto</button>
       <button class="botao">criar um portofolio</button>
       <button class="botao">Atualizar meu currículo</button>
 </div>
