--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
    <section class="conteudo-principal">
-    <h2 class="titulo-principal">Meus objettivos do ano_</h2>
+    <h2 class="titulo-principal">Meus objetivos do ano_</h2>
     <div class="botoes">
     <button class="botao">o ar está ficando mais quente ao seu redor</button>
       <button class="botao">ainda não acabou, garoto</button>
-      <button class="botao">criar um portofolio</button>
-      <button class="botao">Atualizar meu currículo</button>
+      <button class="botao">O abismo le consome</button>
+      <button class="botao">Tudo estará em suas mãos agora</button>
 </div>
   </section>
   </body>
