--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <title>Meus objetivos do ano</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
    <section class="conteudo-principal">
     <h2 class="titulo-principal">Meus objetivos do ano_</h2>
     <div class="botoes">
-    <button class="botao">o ar está ficando mais quente ao seu redor</button>
+      <button class="botao ativo">o ar está ficando mais quente ao seu redor</button>
       <button class="botao">ainda não acabou, garoto</button>
       <button class="botao">O abismo le consome</button>
-      <button class="botao">Tudo estará em suas mãos agora</button>
+      <button class="botao ">Tudo estará em suas mãos agora</button>
 </div>
   </section>
-  </body>
+  <script src="main.js"></script>
+</body>
 </html>
