--- a/index.html
+++ b/index.html
@@ -11,11 +11,30 @@
 <body>
    <section class="conteudo-principal">
     <h2 class="titulo-principal">Meus objetivos do ano_</h2>
+    <div class="conteudo">
     <div class="botoes">
       <button class="botao ativo">o ar está ficando mais quente ao seu redor</button>
       <button class="botao">ainda não acabou, garoto</button>
       <button class="botao">O abismo le consome</button>
       <button class="botao ">Tudo estará em suas mãos agora</button>
+</div>
+  <div class="abas-textos">
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Yharon</h3>
+        <h4 class="aba-conteudo-itulo-sencudario">Themer in</h4>
+     </div>
+     <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Devour of God</h3>
+        <h4 class="aba-conteudo-itulo-sencudario">Themer in</h4>
+  </div>
+  <div class="aba-conteudo">
+  <h3 class="aba-conteudo-titulo-principal">Exo Mechs</h3>
+  <h4 class="aba-conteudo-itulo-sencudario">Themer in</h4>
+</div>
+<div class="aba-conteudo">
+    <h3 class="aba-conteudo-titulo-principal">Supreme Calimitas</h3>
+    <h4 class="aba-conteudo-itulo-sencudario">Themer in</h4>
+  </div>
 </div>
   </section>
   <script src="main.js"></script>
